fork and change

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,5 +1,13 @@
 [
 	{
+		"slug": "interceptor",
+		"name": "Interceptor",
+		"image": "interceptor-cards.jpg",
+		"url": "https://www.google.com",
+		"date": "Jan 2020",
+		"tags": ["Board Game","Digital Art"]
+	},
+	{
 		"slug": "cool-project",
 		"name": "Cool project 1",
 		"image": "placeholder.jpg",
