--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Agus Makmun
-github: https://github.com/agusmakmun
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
-disqus_shortname: stackproblems
+title: Crossroads
+description: My Personal Blog
+author: Ingrid Spangler
+github: https://github.com/I-Spangler
+about: I'm a CS graduate @ UFMG.
+disqus_shortname: crossroads
 google_analytics: UA-XXXXXXXX-Y
 
 enableTags: true
@@ -24,7 +24,7 @@ social:
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://github.com/I-Spangler"
 
 share:
   twitter_username: github.io
@@ -33,8 +33,10 @@ share:
 urls:
     - text: About Me
       url: /about/
-    - text: My Projects
-      url: /projects/
+    - text: Blog
+      url: /blog/
+    - text: Illustrations
+      url: /illustrations/
     - text: XML Feed
       url: /feed.xml
 
@@ -44,7 +46,7 @@ paginate: 20
 per_page: 20
 paginate_path: "/page/:num/"
 markdown: kramdown
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-gist
 
