--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Crossroads
-description: My Personal Blog
+description: My Personal Blog and Portfolio
 author: Ingrid Spangler
 github: https://github.com/istrangeloop
 about: I'm a CS graduate @ UFMG.
